tests/baselines/reference/augmentedTypesInterface.errors.txt
tests/cases/compiler/augmentedTypesInterface.ts(12,11): error TS2507: An interface cannot merge with a non-ambient class.
tests/cases/compiler/augmentedTypesInterface.ts(16,7): error TS2506: A non-ambient class cannot be merged with an interface.
tests/cases/compiler/augmentedTypesInterface.ts(23,11): error TS2300: Duplicate identifier 'i3'.
tests/cases/compiler/augmentedTypesInterface.ts(26,6): error TS2300: Duplicate identifier 'i3'.


==== tests/cases/compiler/augmentedTypesInterface.ts (4 errors) ====
    // interface then interface
    
    interface i {
        foo(): void;
    }
    
    interface i {
        bar(): number;
    }
    
    // interface then class
    interface i2 { // error
              ~~
!!! error TS2507: An interface cannot merge with a non-ambient class.
        foo(): void;
    }
    
    class i2 {  // error
          ~~
!!! error TS2506: A non-ambient class cannot be merged with an interface.
        bar() {
            return 1;
        }
    }
    
    // interface then enum
    interface i3 { // error
              ~~
!!! error TS2300: Duplicate identifier 'i3'.
        foo(): void;
    }
    enum i3 { One }; // error
         ~~
!!! error TS2300: Duplicate identifier 'i3'.
    
    // interface then import
    interface i4 {
        foo(): void;
    }
    
    //import i4 = require('');  // error